--- a/zomato/styles.css
+++ b/zomato/styles.css
@@ -1,15 +1,48 @@
-.container{
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRchcP6-pmtXwp9cXvM6ERCjOykJUuJHryRfg&s");
+header{
+    background-image: url("https://b.zmtcdn.com/web_assets/81f3ff974d82520780078ba1cfbd453a1583259680.png");
     background-size: cover;
     background-repeat: no-repeat;
-    height: 500px;
+    /* height: 500px; */
+    
 }
 .item1{
+    
+    color: aliceblue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 50vh;
+}
+.item1>p{
     font-size: 100px;
     font-weight: bold;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: aliceblue;
-    position: relative;
-    top: 50px;
-    left: 35%;
 }
+.btn{
+    width: 230px;
+    
+}
+/* .container-fluid{
+    background-color: aqua;
+} */
+ .navbar{
+   background-color: aliceblue;
+ }
+ .nav-item{
+   
+    /* position: absolute;
+    right: 10%; */
+ }
+ .features{
+    display: flex;
+    flex-direction: row;
+   align-items: center;
+   justify-content: center;
+   justify-content:space-around;
+ }
+ .search{
+    display: flex;
+    
+ }
+ 
